# DocMind

./: .bandit  .bashrc_project  .cursorrules  .flake8  .gitignore  .safety-policy.yml  .uvignore  CONTEXT_FILES_CHECKLIST.md  Makefile  PHASE4_FINAL_PREPARATION_REPORT.md  PHASE4_FINAL_REPORT.md  PHASE4_PROGRESS_TRACKER.md  PHASE4_SAFETY_IMPLEMENTATION_RESULTS.md  PHASE4_WEEK0_FINAL_SUMMARY.md  PHASE4_WEEK2_DAY2_OPTIMIZATION_REPORT.md  PHASE4_WEEK3_DAY2_QUALITY_REPORT.md  README.md  REFACTORING_PLAN_PHASE2.md  REFACTORING_ROADMAP_2025.md  REFACTORING_STATUS.md  SEARCH_INTERFACE_ANALYSIS.md  TEST_COVERAGE_REPORT.md  debug_thread_manager.py  demo_search_results.py  folder_tree_dependencies.json  integration_test_results.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_phase5_tests.py  run_tests.py  task10_implementation_report.md  task12_final_integration_report.md  task15_verification_report.md  task4_implementation_report.md  task7_implementation_report.md  test_async_integration.py  test_final_integration.py  test_improved_dialogs.py  (+18 more)
.amazonq/pendings/: implementation-rules.md
.amazonq/rules/: code-quality-status.md  japanese.md  phase1-completion-report.md  phase2-completion-report.md  product.md  quality-rules.md  refactoring.md  refactoring_principles.md  rules.md  safety.md  test-consolidation-plan.md
.cursor/rules/: debugging.md  japanese.md  product.md
.github/workflows/: ci.yml  comprehensive-ci.yml  comprehensive-test.yml  comprehensive-validation.yml  quality-gate.yml  release.yml  test-matrix.yml
.kiro/steering/: codequality.md  japanese.md  product.md
archive/analysis_reports/: CONTEXT_FILES_CHECKLIST.md  FOLDER_TREE_ANALYSIS.md  LARGE_FILES_ANALYSIS.md  MAIN_WINDOW_PHASE3_ANALYSIS.md  PHASE2_PROGRESS_REPORT.md  REFACTORING_PLAN_PHASE3.md  REFACTORING_ROADMAP_2025.md  REFACTORING_STATUS.md
archive/legacy_tests_phase4_20250830_130524/: __init__.py  conftest.py  run_integration_tests.py  test_application_startup_validator.py  test_comprehensive_integration_suite.py  test_config.py  test_document_processing_integration.py  test_document_processing_validator.py  test_error_cases_and_debugging.py  test_error_handler.py  test_error_handling_integration.py  test_folder_tree.py  test_graceful_degradation.py  test_gui_integration.py  test_index_rebuild_helpers.py  test_index_rebuild_summary.py  test_indexing_worker_integration.py  test_large_scale_performance.py  test_logging_config.py  test_main_window.py  test_performance.py  test_real_world_simulator.py  test_rebuild_models.py  test_search_interface_integration.py  test_search_manager.py  test_storage.py  test_test_dataset_manager.py
archive/old_configs/: requirements-lock.txt  requirements.txt
archive/phase4_reports/: PHASE4_PREPARATION_CHECKLIST.md  PHASE4_SAFETY_PLAN.md  PHASE4_SESSION_GUIDE.md  PHASE4_WEEK0_SUMMARY.md  PHASE4_WEEK3_DAY1_INTEGRATION_REPORT.md  phase4_startup_test_results.json  phase4_startup_test_results_fixed.json
archive/temp_tests/: test_async_integration.py
build_scripts/: build_all.bat  build_windows.py  create_icon.py  create_preview.py  docmind.spec  docmind_installer.iss  pyinstaller_spec.py  requirements_build.txt  test_deployment.py  version_info.txt
config/: default_config.json
design_docs/: PHASE4_ARCHITECTURE_DESIGN.md
docmind_data/: config.json
docs/: CHANGELOG.md  FEATURES.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_TEST_COVERAGE_REPORT.md  PHASE5_TEST_RECONSTRUCTION_PLAN.md  PHASE6_GUI_TEST_ENVIRONMENT_PLAN.md  PHASE6_PROGRESS_REPORT.md  PHASE6_STEP1_COMPLETION_REPORT.md  PHASE6_STEP2_COMPLETION_REPORT.md  PHASE6_STEP4_COMPLETION_REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE7_CORE_LOGIC_CI_PLAN.md  PHASE7_PROGRESS_TRACKER.md  PHASE7_WEEK1_PROGRESS_REPORT.md  RELEASE_NOTES.md  TECHNICAL_DEBT.md  TROUBLESHOOTING_GUIDE.md  USER_MANUAL.md  index_rebuild_technical_documentation.md  index_rebuild_user_manual.md  testing-timeout-configuration.md
docs/docmind-local-search/: DocuMind.txt  (+9 more)
installer/: install.bat
playground/: test_components_only.py  test_mainwindow_light.py
safety/: backup_manager.py  rollback_manager.py  test_runner.py  validation_manager.py
scripts/: README.md  analyze_dependencies.py  design_architecture.py  final_preparation_check.py  implement_safety_measures.py  measure_optimization_results.py  measure_test_coverage.py  phase4_startup_test.py  phase4_startup_test_fixed.py  phase4_week2_day2_optimization.py  phase4_week3_day1_integration.py  phase4_week3_day1_integration_test.py  phase4_week3_day2_quality_assurance.py  phase4_week3_day3_final_verification.py  record_current_behavior.py  run_tests.py  simple_metrics_analysis.py  update_progress.py
src/: __init__.py
test_documents/: data_analysis.md  machine_learning.txt  python_guide.txt
test_results/: all_tests.xml  gui_tests.xml  integration_tests.xml  performance_tests.xml  suite_metadata.json  test_summary.json  unit_tests.xml
tests/: README.md  __init__.py  conftest.py  run_integration_tests.py  test_application_startup_validator.py  test_compatibility_validator.py  test_comprehensive_integration_suite.py  test_comprehensive_suite.py  test_config.py  test_data_generator.py  test_database.py  test_document_processing.py  test_document_processing_integration.py  test_document_processing_validator.py  test_document_processing_validator_simple.py  test_embedding_integration.py  test_embedding_manager.py  test_end_to_end_integration.py  test_end_to_end_workflow_validator.py  test_error_cases_and_debugging.py  test_error_handler.py  test_error_handling_integration.py  test_file_watcher.py  test_folder_tree.py  test_graceful_degradation.py  test_gui_functionality_validator.py  test_gui_integration.py  test_hybrid_search_integration.py  test_index_manager.py  test_index_rebuild_basic.py  test_index_rebuild_functional.py  test_index_rebuild_helpers.py  test_index_rebuild_integration.py  test_index_rebuild_simple.py  test_index_rebuild_summary.py  test_indexing_worker_integration.py  test_large_scale_performance.py  test_logging_config.py  test_main_window.py  test_performance.py  (+15 more)
(+313 files in other folders)
